Change minion to use pillar data to determine source for minions.

--- a/minion/map.jinja
+++ b/minion/map.jinja
@@ -1,3 +1,4 @@
 {%- import_yaml "minion/defaults.yaml" as defaults -%}
 
 {%- set minion = salt['pillar.get']('minion:lookup', defaults.minion, merge=True) -%}
+{%- set config = salt['pillar.get']('minion:config', {}) -%}
